maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:3: error: not enough arguments for method keepHandOnSideWall: (x: Int)Unit.
Unspecified value parameter x.
    keepHandOnSideWall()
                      ^WallFollowerMaze:26: error: type mismatch;
 found   : Unit
 required: Boolean
      droite()
            ^